--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,12 @@
       <version>2.7.2</version>
       <optional>true</optional>
     </dependency>
-    
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
   </dependencies>
   <dependencyManagement>
     <dependencies>
